changed the documentation to point to right IMDB files

--- a/00_load_data_to_bq.ipynb
+++ b/00_load_data_to_bq.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "dfd2dd00-6bb2-4984-9c30-3aef2d4b4756",
    "metadata": {},
    "outputs": [],
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c31b6010-cef9-4258-83e0-0ce93d960d01",
    "metadata": {},
    "outputs": [],
    "source": [
-    "BUCKET = \"matching-engine-demo-blog\"\n",
+    "BUCKET = \"vertex-stuff_data_transfers\"\n",
     "BQ_DATASET = 'imdb'\n",
-    "PROJECT_ID = 'matching-engine-blog'"
+    "PROJECT_ID = 'vertex-stuff'"
    ]
   },
   {
@@ -58,17 +58,36 @@
     "* https://datasets.imdbws.com/title.akas.tsv.gz\n",
     "* https://datasets.imdbws.com/title.basics.tsv.gz\n",
     "\n",
-    "PUT THESE FILES IN `/data`\n",
+    "PUT THESE FILES IN `{BUCKET}/data`\n",
     "\n",
     "Missing values are denoted by `\\N` per the uploader's notes so we will remove for easier handling by BQ"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "id": "b28bfc58-f0dd-4133-8997-a2086a6b7a23",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2021-10-29 14:11:22--  https://files.grouplens.org/datasets/movielens/ml-25m.zip\n",
+      "Resolving files.grouplens.org (files.grouplens.org)... 128.101.65.152\n",
+      "Connecting to files.grouplens.org (files.grouplens.org)|128.101.65.152|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 261978986 (250M) [application/zip]\n",
+      "Saving to: ‘ml-25m.zip.4’\n",
+      "\n",
+      "ml-25m.zip.4        100%[===================>] 249.84M  6.17MB/s    in 40s     \n",
+      "\n",
+      "utime(ml-25m.zip.4): No such file or directory\n",
+      "2021-10-29 14:12:02 (6.32 MB/s) - ‘ml-25m.zip.4’ saved [261978986/261978986]\n",
+      "\n",
+      "CommandException: No URLs matched: ml-25m.zip\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -80,8 +99,9 @@
       "/ [1 files][    0.0 B/    0.0 B]      0.0 B/s                                   \n",
       "Operation completed over 1 objects.                                              \n",
       "Copying from <STDIN>...\n",
-      "ResumableUploadException: 503 Server Error\n",
-      "Copying from <STDIN>...   0.0 B]   51.9 MiB/s                                   \n",
+      "/ [1 files][    0.0 B/    0.0 B]      0.0 B/s                                   \n",
+      "Operation completed over 1 objects.                                              \n",
+      "Copying from <STDIN>...\n",
       "/ [1 files][    0.0 B/    0.0 B]      0.0 B/s                                   \n",
       "Operation completed over 1 objects.                                              \n",
       "Copying from <STDIN>...\n",
@@ -93,7 +113,7 @@
    "source": [
     "# unzip the files\n",
     "\n",
-    "get the movielense 25 mil dataset\n",
+    "# get the movielens 25 mil dataset\n",
     "!wget https://files.grouplens.org/datasets/movielens/ml-25m.zip\n",
     "# save to cloud storage\n",
     "!gsutil cp ml-25m.zip gs://$BUCKET/data\n",
@@ -123,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "id": "6b24cc36-18f0-40a2-a833-0c6425c10189",
    "metadata": {},
    "outputs": [
@@ -137,8 +157,7 @@
       "  inflating: ml-1m/ratings.dat       \n",
       "  inflating: ml-1m/README            \n",
       "  inflating: ml-1m/users.dat         \n",
-      "BigQuery error in mk operation: Dataset 'matching-engine-blog:movielens' already\n",
-      "exists.\n"
+      "BigQuery error in mk operation: Dataset 'vertex-stuff:movielens' already exists.\n"
      ]
     },
     {
@@ -147,9 +166,9 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 5778k  100 5778k    0     0  17.0M      0 --:--:-- --:--:-- --:--:-- 16.9M\n",
+      "100 5778k  100 5778k    0     0  18.2M      0 --:--:-- --:--:-- --:--:-- 18.2M\n",
       "Upload complete.\n",
-      "Waiting on bqjob_r2cfeb04f893c4d66_0000017c4cf9ade4_1 ... (4s) Current status: DONE   \n"
+      "Waiting on bqjob_r580039f3b9903eff_0000017ccc5d6aa5_1 ... (7s) Current status: DONE   \n"
      ]
     }
    ],
@@ -165,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 5,
    "id": "f0a028af-6e47-47b7-a365-556b1f779ec5",
    "metadata": {},
    "outputs": [
@@ -174,7 +193,7 @@
      "output_type": "stream",
      "text": [
       "Upload complete.\n",
-      "Waiting on bqjob_r49ea3472ad106aae_0000017c4cf9cff9_1 ... (3s) Current status: DONE   \n"
+      "Waiting on bqjob_r6fff72891793a2b1_0000017ccc6637e1_1 ... (3s) Current status: DONE   \n"
      ]
     }
    ],
@@ -196,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "65462941-1431-43ef-967a-429a5f402476",
    "metadata": {},
    "outputs": [],
@@ -212,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "60571128-6c19-4eea-919b-d6b006963f74",
    "metadata": {},
    "outputs": [
@@ -220,11 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 1191874 rows from gs://matching-engine-demo-blog/data/unzipped/title.ratings.tsv.\n",
-      "Loaded 11267858 rows from gs://matching-engine-demo-blog/data/unzipped/name.basics.tsv.\n",
-      "Loaded 47083257 rows from gs://matching-engine-demo-blog/data/unzipped/title.principals.tsv.\n",
-      "Loaded 29326344 rows from gs://matching-engine-demo-blog/data/unzipped/title.akas.tsv.\n",
-      "Loaded 8317909 rows from gs://matching-engine-demo-blog/data/unzipped/title.basics.tsv.\n"
+      "Loaded 1197953 rows from gs://vertex-stuff_data_transfers/data/unzipped/title.ratings.tsv.\n"
      ]
     }
    ],
@@ -267,56 +282,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "50559853-a555-4b4d-aec6-711cf0a16a51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Query complete after 0.00s: 100%|██████████| 6/6 [00:00<00:00, 2795.27query/s]                        \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bigquery\n",
     "\n",
@@ -340,56 +309,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "33bd0c85-a335-4a33-9df4-88230cc98ffa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Query complete after 0.00s: 100%|██████████| 19/19 [00:00<00:00, 8214.80query/s]                       \n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bigquery\n",
     "CREATE OR REPLACE TABLE `matching-engine-blog.movielens.movie_view` AS\n",
@@ -458,9 +381,10 @@
  ],
  "metadata": {
   "environment": {
-   "name": "tf2-gpu.2-6.m80",
+   "kernel": "conda-root-py",
+   "name": "tf2-gpu.2-6.m82",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m80"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m82"
   },
   "kernelspec": {
    "display_name": "Python [conda env:root] *",
