final change to 00

--- a/00_load_data_to_bq.ipynb
+++ b/00_load_data_to_bq.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "60571128-6c19-4eea-919b-d6b006963f74",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 1197953 rows from gs://vertex-stuff_data_transfers/data/unzipped/title.ratings.tsv.\n"
+      "Loaded 1197953 rows from gs://vertex-stuff_data_transfers/data/unzipped/title.ratings.tsv.\n",
+      "Loaded 11332910 rows from gs://vertex-stuff_data_transfers/data/unzipped/name.basics.tsv.\n",
+      "Loaded 47370033 rows from gs://vertex-stuff_data_transfers/data/unzipped/title.principals.tsv.\n",
+      "Loaded 29633847 rows from gs://vertex-stuff_data_transfers/data/unzipped/title.akas.tsv.\n",
+      "Loaded 8317909 rows from gs://vertex-stuff_data_transfers/data/unzipped/title.basics.tsv.\n"
      ]
     }
    ],
@@ -282,14 +286,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "50559853-a555-4b4d-aec6-711cf0a16a51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Query complete after 0.01s: 100%|██████████| 6/6 [00:00<00:00, 3858.01query/s]                        \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%bigquery\n",
     "\n",
-    "CREATE OR REPLACE TABLE `matching-engine-blog.movielens.user_view` AS\n",
+    "CREATE OR REPLACE TABLE `.movielens.user_view` AS\n",
     "SELECT \n",
     "\tCAST(user_id as STRING) as user_id,\n",
     "    reviews.item_id as movie_id,\n",
@@ -298,9 +348,9 @@
     "    EXTRACT(WEEK FROM timestamp) as week_num,\n",
     "    EXTRACT(HOUR FROM timestamp) as hour,\n",
     "FROM \n",
-    "    `matching-engine-blog.movielens.movie_titles` mt,\n",
-    "    `matching-engine-blog.movielens.movielens_1m` reviews,\n",
-    "    `matching-engine-blog.imdb.title_basics` tb \n",
+    "    `movielens.movie_titles` mt,\n",
+    "    `movielens.movielens_1m` reviews,\n",
+    "    `imdb.title_basics` tb \n",
     "WHERE \n",
     "    mt.movie_id = reviews.item_id AND \n",
     "    UPPER(CONCAT(tb.originalTitle, \" (\", tb.startYear, \")\")) = UPPER(mt.movie_title)\n",
@@ -309,13 +359,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "33bd0c85-a335-4a33-9df4-88230cc98ffa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Query complete after 0.00s: 100%|██████████| 20/20 [00:00<00:00, 10646.79query/s]                      \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%bigquery\n",
-    "CREATE OR REPLACE TABLE `matching-engine-blog.movielens.movie_view` AS\n",
+    "CREATE OR REPLACE TABLE `movielens.movie_view` AS\n",
     "WITH \n",
     "    actors AS (\n",
     "        SELECT \n",
@@ -323,8 +419,8 @@
     "        STRING_AGG(nb.nconst, ' ') actors,\n",
     "        STRING_AGG(REPLACE(nb.primaryProfession, \",\", \" \"), ' ') as profession\n",
     "        FROM \n",
-    "        `matching-engine-blog.imdb.title_principals` tp,\n",
-    "        `matching-engine-blog.imdb.name_basics` nb\n",
+    "        `imdb.title_principals` tp,\n",
+    "        `imdb.name_basics` nb\n",
     "        WHERE\n",
     "        tp.nconst = nb.nconst AND \n",
     "        tp.category = \"actor\"\n",
@@ -336,8 +432,8 @@
     "        STRING_AGG(nb.nconst, ' ') actors,\n",
     "        STRING_AGG(REPLACE(nb.primaryProfession, \",\", \" \"), ' ') as profession\n",
     "        FROM \n",
-    "        `matching-engine-blog.imdb.title_principals` tp,\n",
-    "        `matching-engine-blog.imdb.name_basics` nb\n",
+    "        `imdb.title_principals` tp,\n",
+    "        `imdb.name_basics` nb\n",
     "        WHERE\n",
     "        tp.nconst = nb.nconst AND \n",
     "        tp.category = \"director\"\n",
@@ -358,9 +454,9 @@
     "    actors.profession as actor_profession\n",
     "\n",
     "FROM\n",
-    "    `matching-engine-blog.imdb.title_basics` tb ,\n",
-    "    `matching-engine-blog.imdb.title_ratings` tr ,\n",
-    "    `matching-engine-blog.movielens.movie_titles` mt,\n",
+    "    `imdb.title_basics` tb ,\n",
+    "    `imdb.title_ratings` tr ,\n",
+    "    `movielens.movie_titles` mt,\n",
     "    directors,\n",
     "    actors\n",
     "WHERE \n",
